--- a/css/pixel-arcade-df8153.webflow.css
+++ b/css/pixel-arcade-df8153.webflow.css
@@ -950,7 +950,7 @@
     grid-template-rows: auto auto;
     grid-template-columns: 1fr 1fr;
     grid-auto-columns: 1fr;
-    height: 605px;
+    /* height: 605px; */
     margin-bottom: 80px;
     margin-left: auto;
     margin-right: auto;
